2002-12-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (SETUP_PIC_REG): Add .size
	directive.

2002-12-11  Jakub Jelinek  <jakub@redhat.com>

	* io/test-utime (main): If stnow.st[am]time is wrong, print it and
	not st.st[am]time.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* intl/loadmsgcat.c (_nl_init_domain_conv): Don't append //TRANSLIT to
	the encoding if it already has slashes.
	Reported by Perry Rapp <prapp@erols.com>.

2002-12-11  Roland McGrath  <roland@redhat.com>

	* csu/Makefile ($(objpfx)elf-init.oS): Remove target, braino.
	(CPPFLAGS-elf-init.oS, CFLAGS-elf-init.oS): New variables.
	Turn off PIC for compiling this file.

2002-12-11  Ulrich Drepper  <drepper@redhat.com>

	* malloc/thread-m.h: Remove thread_id type and MUTEX_INITIALIZER
	definitions.  Not needed.
	[_LIBC]: Use definitions from libc-lock.h instead of referencing
	pthread routines directly.
	* malloc/arena.c (ptmalloc_unlock_all2): Don't add (void) to
	mutex_init calls.
	(arena_get2): Don't look at return value of mutex_lock.

2002-12-11  Roland McGrath  <roland@redhat.com>

	* csu/Makefile ($(objpfx)elf-init.oS): New target, just clone
	elf-init.o instead of compiling a PIC version.

2002-12-11  Bruno Haible  <bruno@clisp.org>

	* intl/gettext.h: Renamed to ...
	* intl/gmo.h: ... here.
	* intl/Makefile (distribute): Add gmo.h, remove gettext.h.
	* intl/gettextP.h: Update.
	* intl/loadmsgcat.c: Update.

	* intl/gettextP.h (PARAMS): Make more portable.
	(attribute_hidden): Define as empty macro if not already defined.
	* intl/hash-string.h (PARAMS): Make more portable.
	* intl/loadinfo.h (PARAMS): Likewise.
	* intl/plural-exp.h (PARAMS): Likewise.
	(attribute_hidden): Move definition near the definition of
	internal_function.

	* intl/gettextP.h (_nl_locale_name) [!_LIBC]: New declaration.
	* intl/plural-exp.h (plural_eval) [!_LIBC]: New declaration.

2002-07-13  Bruno Haible  <bruno@clisp.org>

	* intl/dcigettext.c (freea): New macro.